--- a/bin/WeExchange.dll.config
+++ b/bin/WeExchange.dll.config
@@ -7,7 +7,7 @@
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
-	<sessionState mode="InProc" />
+    <sessionState mode="InProc" cookieless="false" stateConnectionString="tcpip=server:port" sqlConnectionString="sql connection string" />
   </system.web>
   <system.codedom>
     <compilers>
@@ -15,6 +15,12 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <connectionStrings>
+    <add name="test1ConnectionString" connectionString="server=localhost;user id=root;password=838180;database=weexchange;pooling=true"
+      providerName="MySql.Data.MySqlClient" />
+    <add name="test1ConnectionString2" connectionString="server=localhost;user id=root;password=838180;database=weexchange"
+      providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
