--- a/WeExchange.csproj
+++ b/WeExchange.csproj
@@ -62,6 +62,7 @@
     <Reference Include="MySql.Data, Version=8.0.25.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL">
       <HintPath>packages\MySql.Data.8.0.25\lib\net452\MySql.Data.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationFramework" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
@@ -138,8 +139,15 @@
     <Content Include="images\Top.png" />
     <Content Include="images\Xiamen.png" />
     <Content Include="ItemImage.aspx" />
+    <Content Include="ItemPage\itemPage.css" />
+    <Content Include="ItemPage\itemPage.js" />
+    <Content Include="ItemPage\ItemPage.aspx" />
+    <Content Include="ItemPage\jquery.js" />
     <Content Include="LoginPage\Login.aspx" />
     <Content Include="LoginPage\Register&amp;Login.css" />
+    <Content Include="PostPage\PostPage.aspx" />
+    <Content Include="PostPage\post_control.js" />
+    <Content Include="PostPage\post_style.css" />
     <Content Include="RegisterPage\Register&amp;Login.css" />
     <Content Include="RegisterPage\Register.aspx" />
     <Content Include="Web.config" />
@@ -160,12 +168,26 @@
     <Compile Include="ItemImage.aspx.designer.cs">
       <DependentUpon>ItemImage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="ItemPage\ItemPage.aspx.cs">
+      <DependentUpon>ItemPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ItemPage\ItemPage.aspx.designer.cs">
+      <DependentUpon>ItemPage.aspx</DependentUpon>
+    </Compile>
     <Compile Include="LoginPage\Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="LoginPage\Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="PostPage\PostPage.aspx.cs">
+      <DependentUpon>PostPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PostPage\PostPage.aspx.designer.cs">
+      <DependentUpon>PostPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Base.Master.cs">
@@ -200,9 +222,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ItemPage\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
